updated travis ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - go get -t -v ./...
 
 script:
-  - go test -p=1 -coverprofile=coverage.txt -covermode=atomic https://github.com/Dilshat/sms-sender/...
+  - go test -coverprofile=coverage.txt -covermode=atomic ./...
   - rm coverage.text
 
 after_success:
