Replaced logger. Changed type of message smsc-id field to string

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 #smsc IP
-SMS_IP=172.28.146.122
+SMS_IP=smscsim.melroselabs.com
 #smsc port
-SMS_PORT=8018
+SMS_PORT=2775
 #smsc account
-SMS_ID=testtest
+SMS_ID=337751
 #smsc password
-SMS_PWD=*
+SMS_PWD=fa3233
 #port on which HTTP API is exposed
 HTTP_PORT=8080
 #how many days to store data
