Added option to write logs to file

--- a/.env
+++ b/.env
@@ -20,4 +20,5 @@ SMS_MAX_LEN=300
 WEB_HOOK=
 #regular expression to validate recipient phone numbers. See https://github.com/google/re2/wiki/Syntax
 PHONE_MASK=996\d+
-LOG_LEVEL=error
+LOG_LEVEL=debug
+LOG_FILE=/tmp/sms.log
