--- a/.env
+++ b/.env
@@ -21,4 +21,4 @@ WEB_HOOK=
 #regular expression to validate recipient phone numbers. See https://github.com/google/re2/wiki/Syntax
 PHONE_MASK=996\d+
 LOG_LEVEL=debug
-LOG_FILE=/tmp/sms.log
+#LOG_FILE=/tmp/sms.log
